Jade to pug & mofification in lint file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Create-web-site",
   "version": "0.1.0",
-  "description": "All base files used for creating a new site from start to finish. Including Saas, jade, js, browsersync, bourbon, font-awesome controlled by a gulp file. All ready configured",
+  "description": "All base files used for creating a new site from start to finish. Including Saas, pug(jade), js, browsersync, bourbon, font-awesome controlled by a gulp file. All ready configured",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
@@ -15,22 +15,20 @@
     "gulp-csso": "*",
     "gulp-if": "*",
     "gulp-imagemin": "*",
-    "gulp-jade": "*",
     "gulp-jshint": "*",
     "gulp-load-plugins": "*",
     "gulp-minify-html-2": "*",
     "gulp-plumber": "*",
     "gulp-print": "*",
+    "gulp-pug": "^3.0.4",
     "gulp-retinize": "*",
     "gulp-sass": "*",
     "gulp-sitemap": "*",
     "gulp-uglify": "*",
     "gulp-useref": "*",
     "imagemin-pngquant": "*",
-    "jshint": "*",
-    "jshint-stylish": "*",
     "useref": "*",
-    "yargs": "*"
+    "pug-lint-config-emarsys":"*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
