Fix saas-lint (no undersore needed)

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -61,10 +61,7 @@ rules:
   border-zero: 1
   brace-style: 1
   empty-args: 1
-  clean-import-paths:
-    - 1
-    - filename-extension: false
-      leading-underscore: true
+  clean-import-paths: 1
   hex-length: 1
   hex-notation: 1
   indentation: 1
