Critical, jshint, minifyhtml new version

--- a/package.json
+++ b/package.json
@@ -8,30 +8,34 @@
     "bower": "*",
     "browser-sync": "*",
     "check-pages": "*",
-    "critical": "git://github.com/addyosmani/critical.git#vinyl",
+    "critical": "*",
     "del": "*",
     "gulp": "*",
     "gulp-autoprefixer": "*",
     "gulp-csso": "*",
+    "gulp-htmlmin": "*",
     "gulp-if": "*",
     "gulp-imagemin": "*",
-    "gulp-jshint": "*",
+    "gulp-jshint": "^2.0.2",
     "gulp-load-plugins": "*",
-    "gulp-minify-html-2": "*",
     "gulp-plumber": "*",
     "gulp-print": "*",
-    "gulp-pug": "^3.0.4",
+    "gulp-pug": "*",
+    "gulp-replace-path": "*",
+    "gulp-responsive": "*",
     "gulp-retinize": "*",
-    "gulp-responsive":"*",
     "gulp-sass": "*",
     "gulp-sitemap": "*",
+    "gulp-svgmin": "*",
     "gulp-uglify": "*",
-    "gulp-util":"*",
     "gulp-useref": "*",
+    "gulp-util": "*",
     "imagemin-pngquant": "*",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "pug-lint-config-emarsys": "*",
     "useref": "*",
-    "pug-lint-config-emarsys":"*",
-    "vinyl-ftp":"*"
+    "vinyl-ftp": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
