--- a/package.json
+++ b/package.json
@@ -1,39 +1,44 @@
 {
   "name": "Create-web-site",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "All base files used for creating a new site from start to finish. Including Saas, pug(jade), js, browsersync, bourbon, font-awesome controlled by a gulp file. All ready configured",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "bower": "*",
-    "browser-sync": "*",
-    "check-pages": "*",
-    "critical": "git://github.com/addyosmani/critical.git#vinyl",
-    "del": "*",
-    "gulp": "*",
-    "gulp-autoprefixer": "*",
-    "gulp-csso": "*",
-    "gulp-if": "*",
-    "gulp-imagemin": "*",
-    "gulp-jshint": "*",
-    "gulp-load-plugins": "*",
-    "gulp-minify-html-2": "*",
-    "gulp-plumber": "*",
-    "gulp-print": "*",
-    "gulp-pug": "^3.0.4",
-    "gulp-retinize": "*",
-    "gulp-resppnsive":"*",
-    "gulp-sass": "*",
-    "gulp-sitemap": "*",
-    "gulp-uglify": "*",
-    "gulp-util":"*",
-    "gulp-useref": "*",
-    "imagemin-pngquant": "*",
-    "useref": "*",
-    "pug-lint-config-emarsys":"*",
-    "vinyl-ftp":"*"
-  },
-  "scripts": {
+      "devDependencies": {
+        "bower": "*",
+        "browser-sync": "*",
+        "check-pages": "*",
+        "critical": "*",
+        "del": "*",
+        "gulp": "*",
+        "gulp-autoprefixer": "*",
+        "gulp-csso": "*",
+        "gulp-htmlmin": "*",
+        "gulp-if": "*",
+        "gulp-imagemin": "*",
+        "gulp-jshint": "^2.0.2",
+        "gulp-load-plugins": "*",
+        "gulp-plumber": "*",
+        "gulp-print": "*",
+        "gulp-pug": "*",
+        "gulp-replace-path": "*",
+        "gulp-responsive": "*",
+        "gulp-retinize": "*",
+        "gulp-sass": "*",
+        "gulp-sitemap": "*",
+        "gulp-svgmin": "*",
+        "gulp-uglify": "^2.0.1",
+        "gulp-useref": "*",
+        "gulp-util": "*",
+        "imagemin-pngquant": "*",
+        "jshint": "^2.9.4",
+        "jshint-stylish": "^2.2.1",
+        "pug-lint-config-emarsys": "*",
+        "useref": "*",
+        "vinyl-ftp": "*"
+      },
+       "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
