--- a/package.json
+++ b/package.json
@@ -5,78 +5,54 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-<<<<<<< HEAD
-      "devDependencies": {
-        "bower": "*",
-        "browser-sync": "*",
-        "check-pages": "*",
-        "critical": "*",
-        "del": "*",
-        "gulp": "*",
-        "gulp-autoprefixer": "*",
-        "gulp-csso": "*",
-        "gulp-htmlmin": "*",
-        "gulp-if": "*",
-        "gulp-imagemin": "*",
-        "gulp-jshint": "^2.0.2",
-        "gulp-load-plugins": "*",
-        "gulp-plumber": "*",
-        "gulp-print": "*",
-        "gulp-pug": "*",
-        "gulp-replace-path": "*",
-        "gulp-responsive": "*",
-        "gulp-retinize": "*",
-        "gulp-sass": "*",
-        "gulp-sitemap": "*",
-        "gulp-svgmin": "*",
-        "gulp-uglify": "^2.0.1",
-        "gulp-useref": "*",
-        "gulp-util": "*",
-        "imagemin-pngquant": "*",
-        "jshint": "^2.9.4",
-        "jshint-stylish": "^2.2.1",
-        "pug-lint-config-emarsys": "*",
-        "useref": "*",
-        "vinyl-ftp": "*"
-      },
-       "scripts": {
-=======
     "bower": "*",
     "browser-sync": "*",
     "check-pages": "*",
     "critical": "*",
     "del": "*",
+    "eslint": "*",
     "gulp": "*",
     "gulp-autoprefixer": "*",
+    "gulp-concat": "^2.6.1",
     "gulp-csso": "*",
+    "gulp-eslint": "*",
+    "gulp-filter": "*",
     "gulp-htmlmin": "*",
-    "gulp-if": "*",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "*",
-    "gulp-jshint": "^2.0.2",
     "gulp-load-plugins": "*",
-    "gulp-plumber": "*",
-    "gulp-print": "*",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "*",
-    "gulp-replace-path": "*",
+    "gulp-pug-lint": "*",
+    "gulp-pug-linter": "*",
+    "gulp-rename": "^1.2.2",
     "gulp-responsive": "*",
-    "gulp-retinize": "*",
+    "gulp-rev": "^8.0.0",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "*",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-sitemap": "*",
     "gulp-svgmin": "*",
+    "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "*",
     "gulp-useref": "*",
     "gulp-util": "*",
+    "gulp.spritesmith": "*",
+    "gutil": "*",
+    "gutil-color-log": "*",
+    "imagemin-jpeg-recompress": "*",
     "imagemin-pngquant": "*",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1",
+    "jshint": "*",
+    "jshint-stylish": "*",
     "pug-lint-config-emarsys": "*",
+    "svg4everybody": "^2.1.9",
     "useref": "*",
+    "vinyl-buffer": "*",
     "vinyl-ftp": "*"
   },
   "scripts": {
->>>>>>> 2d3eb2f487292d0a7465fe61eb4549e728ccbf6b
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
-}
+  }
