--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Create-web-site",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "All base files used for creating a new site from start to finish. Including Saas, pug(jade), js, browsersync, bourbon, font-awesome controlled by a gulp file. All ready configured",
   "main": "index.js",
   "dependencies": {},
@@ -9,32 +9,32 @@
     "browser-sync": "*",
     "check-pages": "*",
     "critical": "*",
-    "css-reset-and-normalize-sass": "^0.1.2",
+    "css-reset-and-normalize-sass": "*",
     "del": "*",
     "eslint": "*",
     "gulp": "*",
     "gulp-autoprefixer": "*",
-    "gulp-concat": "^2.6.1",
+    "gulp-concat": "*",
     "gulp-csso": "*",
     "gulp-eslint": "*",
     "gulp-filter": "*",
     "gulp-htmlmin": "*",
-    "gulp-if": "^2.0.2",
+    "gulp-if": "*",
     "gulp-imagemin": "*",
     "gulp-load-plugins": "*",
-    "gulp-plumber": "^1.1.0",
+    "gulp-plumber": "*",
     "gulp-pug": "*",
     "gulp-pug-lint": "*",
     "gulp-pug-linter": "*",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^*",
     "gulp-responsive": "*",
-    "gulp-rev": "^8.0.0",
-    "gulp-rev-replace": "^0.4.3",
+    "gulp-rev": "*",
+    "gulp-rev-replace": "*",
     "gulp-sass": "*",
-    "gulp-sass-lint": "^1.3.2",
+    "gulp-sass-lint": "*",
     "gulp-sitemap": "*",
     "gulp-svgmin": "*",
-    "gulp-svgstore": "^6.1.0",
+    "gulp-svgstore": "*",
     "gulp-uglify": "*",
     "gulp-useref": "*",
     "gulp-util": "*",
@@ -46,7 +46,7 @@
     "jshint": "*",
     "jshint-stylish": "*",
     "pug-lint-config-emarsys": "*",
-    "svg4everybody": "^2.1.9",
+    "svg4everybody": "*",
     "useref": "*",
     "vinyl-buffer": "*",
     "vinyl-ftp": "*"
